# ga-mcp-full

./: .gitignore  .mcp.json  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: release.yml
commands/: auth-login.md  auth-logout.md  auth-status.md  reconnect.md  setup.md
docs/: CNAME  index.html  privacy.html  terms.html
ga_mcp/: auth.py  cli.py  coordinator.py  server.py
ga_mcp/tools/: auth.py  utils.py
ga_mcp/tools/admin/: audiences.py  bigquery_links.py  custom_definitions.py  data_streams.py  firebase_links.py  google_ads_links.py  info.py  key_events.py  measurement_protocol.py  properties.py
ga_mcp/tools/reporting/: core.py  metadata.py  realtime.py
hooks/: hooks.json
hooks/scripts/: ensure-auth.sh  pretool-auth-check.sh
scripts/: record-oauth-demo.sh
