[project]
name = "ga-mcp-full"
description = "GA4 MCP server with full Admin API read/write access"
readme = "README.md"
version = "0.4.0"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ryan Robson" }]
keywords = ["google-analytics", "ga4", "mcp", "claude-code", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "google-analytics-data==0.21.0",
    "google-analytics-admin==0.28.0",
    "google-auth~=2.40",
    "google-auth-oauthlib~=1.2",
    "mcp>=1.24.0",
    "google-adk>=1.24.1",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/ringo380/ga-mcp-full"
Repository = "https://github.com/ringo380/ga-mcp-full"
Issues = "https://github.com/ringo380/ga-mcp-full/issues"
"Privacy Policy" = "https://github.com/ringo380/ga-mcp-full/blob/main/PRIVACY.md"

[project.scripts]
ga-mcp-full = "ga_mcp.cli:main"

[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ga_mcp*"]
exclude = ["tests*", "hooks*", "commands*"]
